[#165] Fix six-icon not horizontally aligned in icon list

--- a/libraries/ui-library/src/components/six-icon/six-icon.scss
+++ b/libraries/ui-library/src/components/six-icon/six-icon.scss
@@ -6,6 +6,7 @@
 
 slot {
   display: flex;
+  justify-content: center;
 }
 
 .material-icons {
